Added menu, Added base styling for menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <title>Steven de Valk</title>
 </head>
 <body>
-    
+    <div id="app-container">
+        <div id="nav-container">
+            <nav>
+                <ul>
+                    <li>Profile</li>
+                    <li>Experience</li>
+                    <li>Education</li>
+                    <li>Projects</li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+
 </body>
 </html>
