--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div id="app-container">
+        
         <div id="nav-container">
             <nav>
                 <ul>
@@ -21,6 +22,18 @@
                 </ul>
             </nav>
         </div>
+        
+        <div id="page-content">
+            <h1>Hi, my name is Steven de Valk</h1>
+            <p>
+            BSc. Informatie- en Communicatietechnologie (ICT) behaald aan de
+            Hogeschool Windesheim in Almere in juli 2022. Vijf stages succesvol
+            afgerond bij VMI Care, Clappform, DAT.Mobility en het
+            Flevoziekenhuis. HAVO diploma behaald in juni 2017. Internationaal
+            georiënteerd en cultureel bewust door jeugd in VS, VK en Singapore.
+            </p>
+        </div>
+
     </div>
 
 
