Added skills option, lowered nav padding

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <ul>
                     <li>Profile</li>
                     <li>Experience</li>
+                    <li>Skills</li>
                     <li>Education</li>
                     <li>Projects</li>
                 </ul>
