Added Experience content section

--- a/index.html
+++ b/index.html
@@ -23,16 +23,53 @@
                 </ul>
             </nav>
         </div>
-        
         <div id="page-content">
-            <h1>Hi, my name is Steven de Valk</h1>
-            <p>
-            BSc. Informatie- en Communicatietechnologie (ICT) behaald aan de
-            Hogeschool Windesheim in Almere in juli 2022. Vijf stages succesvol
-            afgerond bij VMI Care, Clappform, DAT.Mobility en het
-            Flevoziekenhuis. HAVO diploma behaald in juni 2017. Internationaal
-            georiënteerd en cultureel bewust door jeugd in VS, VK en Singapore.
-            </p>
+
+            <div id="profile-container">
+                <h1>Hi, my name is Steven de Valk</h1>
+                <p>
+                BSc. Informatie- en Communicatietechnologie (ICT) behaald aan de
+                Hogeschool Windesheim in Almere in juli 2022. Vijf stages succesvol
+                afgerond bij VMI Care, Clappform, DAT.Mobility en het
+                Flevoziekenhuis. HAVO diploma behaald in juni 2017. Internationaal
+                georiënteerd en cultureel bewust door jeugd in VS, VK en Singapore.
+                </p>
+            </div>
+
+            <h1>Experience</h1>
+            <div id="experience-container">
+                <div id="experience-nav">
+                    <nav>
+                        <ul>
+                            <li>Capgemini</li>
+                            <li>VMI</li>
+                            <li>Clappform</li>
+                            <li>Flevoziekenhuis</li>
+                        </ul>
+                    </nav>
+                </div>
+                <div id="experience-content">
+                    <h2>Junior .NET Developer</h2>
+                    <div class="experience-attribute-container">
+                        <div>
+                            <span class="experience-attribute">
+                                Duration:
+                            </span>
+                            Oct. 2022 - Dec. 2022
+                        </div>
+                        <div>
+                            <span class="experience-attribute">
+                                Location:
+                            </span>
+                            Utrecht
+                        </div>
+                    </div>
+                    <div id="experience-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Habitasse platea dictumst quisque sagittis purus sit amet volutpat. Sem fringilla ut morbi tincidunt augue interdum velit euismod in. Leo in vitae turpis massa. Non arcu risus quis varius.
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </div>
