Added "Professional Interests" section under "Skills"

--- a/index.html
+++ b/index.html
@@ -114,9 +114,16 @@
                     <ul>
                         <li>Professional Scrum Master™ I</li>
                     </ul>
+
+                    <h2>Professional Interests</h2>
+                    <ul>
+                        <li>Front-end development</li>
+                        <li>Software development in Python</li>
+                    </ul>
                     
                 </div>
             
+            </div>
 
             <h1>Projects</h1>
             <div id="projects-container">
